[tool.poetry]
name = "repl_python3_python-intro-labs"
version = "0.1.0"
description = ""
authors = ["ErinWoodrum <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
alien-invasion1 = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
